--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,5 @@
-@@include('page-top-revslider.htm', {
-    "page": "default"
-})
-<!-- @@include('preloader.htm') -->
-@@include('header/header-home1.htm')
-@@include('hero-sliders/home-one.htm')
-@@include('page-sections/featured-project.htm')
-@@include('page-sections/industry-slider.htm')
-@@include('page-sections/featured-project-two.htm')
-@@include('page-sections/testimonial-brand-slider.htm')
-@@include('page-sections/project-counter.htm')
-@@include('page-sections/blog-newsletter.htm')
-@@include('page-sections/support-footer.htm')
+@@include('page-top.htm')
+@@include('header/header-default.htm')
 @@include('footer/footer-default.htm')
 @@include('header/elements/mobile-menu.htm')
-@@include('scroll-top.htm')
-@@include('page-bottom-map-revslider.htm')
+@@include('page-bottom.htm')
