--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 @@include('page-top.htm')
 @@include('header/header-default.htm')
+<i class="fa fa-facebook"></i>
 @@include('footer/footer-default.htm')
 @@include('header/elements/mobile-menu.htm')
 @@include('page-bottom.htm')
