--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     "headerStyle": "default"
 })
 
-@@include('header/footer.htm', {
+@@include('footer/footer.htm', {
     "footerStyle": "default"
 })
 
